# drift

./: AZURE_SSO.md  BOLT_INTEGRATION.md  Cargo.toml  Dockerfile  GHOSTBAY_S3_STARTHERE.md  GITHUB_SSO.md  GOOGLE_SSO.md  IMPLEMENTATION_SUMMARY.md  README-DEPLOYMENT.md  README-ZQLITE.md  README.md  TODO.md  docker-compose.yml  drift.toml  nginx.conf  test-registry.sh
assets/: ICONS.md  styles.css
docs/: README.md  installation.md
docs/auth/: rbac.md
docs/features/: quic-transport.md
docs/sso/: README.md  azure-ad.md  github.md
scripts/: setup-dev.sh
src/: audit.rs  bolt_integration.rs  cluster.rs  config.rs  garbage_collector.rs  lib.rs  main.rs  metrics.rs  optimization.rs  quic.rs  rbac.rs  server.rs  signing.rs
src/api/: admin.rs  auth.rs  bolt.rs  middleware.rs  mod.rs  quic.rs
src/api/registry/: blobs.rs  manifests.rs  mod.rs  uploads.rs
src/auth/: basic.rs  jwt.rs  mod.rs  oauth.rs  oidc.rs
src/static/: styles.css
src/storage/: filesystem.rs  ghostbay.rs  mod.rs  s3.rs
src/ui/: mod.rs
src/ui/components/: button.rs  card.rs  dashboard.rs  mod.rs  navbar.rs  search.rs
src/ui/pages/: auth.rs  bolt.rs  mod.rs  repositories.rs  settings.rs
src/ui/templates/: dashboard.html  organizations.html  repositories.html  settings.html  users.html
zqlite/: Dockerfile
